Added agenda & registration links & speakers list

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </p>
         <br>
 
-        <a href="#location" class="link"><i>We look forward to seeing you there!</i></a>
+        <a href="#location" class="link"><i>Hope to see you on Saturday, 24th August @ ThoughtWorks, Koramangala Bengaluru</i></a>
         <br><br>
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
@@ -142,7 +142,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-0"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Registration</p>
+                <p>Registrations</p>
 
             </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Event Kick Off<br><i><font size="4">by Anirvan Debabrata Lahiri (Product Manager at ThoughtWorks)</i></font></p>
+                <p>Event Kick Off<br><i><font size="4">Anirvan Debabrata Lahiri (Product Manager, ThoughtWorks)</i></font></p>
 
             </div>
 
@@ -169,13 +169,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    9:30 AM
+                    9:30 AM - 10:15 AM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Keynote Address: First Principles Thinking<br><i><font size="4">Anuj Rathi (Vice President of Product Management at Swiggy)</i></font></p></p>
+                <p>Keynote Address: First Principles Thinking<br><i><font size="4">Anuj Rathi (Vice President of Product Management, Swiggy)</i></font></p></p>
             </div>
           </div>
 
@@ -184,13 +184,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    10:15 AM
+                    10:15 AM - 11:00 AM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-3"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Data, Meet Homo Sapiens<br><i><font size="4">Ripul Kumar (Independent Consultant at Make My Trip)</i></font></p></p>
+                <p>Data, Meet Homo Sapiens<br><i><font size="4">Ripul Kumar (Independent Consultant, MakeMyTrip)</i></font></p></p>
             </div>
           </div>
 
@@ -199,7 +199,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    11:00 AM
+                    11:00 AM - 11:15 AM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-3"
@@ -214,13 +214,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    11:15 AM
+                    11:15 AM - 12:00 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>Insights that Inspire Innovation<br><i><font size="4">Deepa Bacchu (Co-Founder and CEO at Pensar Design)</i></font></p></p>
+                 <p>Insights that Inspire Innovation<br><i><font size="4">Deepa Bachu (Co-Founder and CEO, Pensaar Design)</i></font></p></p>
             </div>
           </div>
 
@@ -229,13 +229,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    12:00 Noon
+                    12:00 Noon - 12:45 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>First Principles of Culture and Product<br><i><font size="4">Vikram Shenoy (Lead at India Digital Studios, Deloitte Digital)</i></font></p></p>
+                 <p>First Principles of Culture and Product<br><i><font size="4">Vikram Shenoy (Country Lead, India Studios, Deloitte Digital)</i></font></p></p>
             </div>
           </div>
 
@@ -244,13 +244,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    12:45 PM
+                    12:45 PM - 1:00 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>Making Digital Payments Ubiquitous<br><i><font size="4">Vinod Kumaar R (Lead Developer at ThoughtWorks)</i></font></p></p>
+                 <p>Making Digital Payments Ubiquitous<br><i><font size="4">Vinod Kumaar R (Lead Developer, ThoughtWorks)</i></font></p></p>
             </div>
           </div>
 
@@ -259,7 +259,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    1:00 PM
+                    1:00 PM - 1:45 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
@@ -274,13 +274,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    1:45 PM
+                    1:45 PM - 2:30 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>SLICE - The Experimentation Mindset<br><i><font size="4">Vishal Vinaykumar Prasad (Lead Business Analyst at ThoughtWorks)</i></font></p></p>
+                 <p>SLICE - The Experimentation Mindset<br><i><font size="4">Vishal Vinaykumar Prasad (Lead Business Analyst, ThoughtWorks)</i></font></p></p>
             </div>
           </div>
 
@@ -289,13 +289,13 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    2:30 PM
+                    2:30 PM - 2:45 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>Applying AI in hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst at ThoughtWorks)</i></font></p></p>
+                 <p>Applying AI in Hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst, ThoughtWorks)</i></font></p></p>
             </div>
           </div>
 
@@ -304,7 +304,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    2:45 PM
+                    2:45 PM - 3:00 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
@@ -319,7 +319,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    3:00 PM
+                    3:00 PM - 5:00 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
@@ -355,44 +355,44 @@
         <img src="./img/2019/anuj.jpg" />
         <div class="speakers-list-description">
             <h6>Anuj Rathi</h6>
-            <p>Vice President of Product Management at Swiggy</p>
+            <p>Vice President of Product Management, Swiggy</p>
         </div>
     </div>
     <div class="speakers-list">
         <div class="speakers-list-item"><img src="./img/2019/ripul.jpg" />
             <div class="speakers-list-description">
                 <h6>Ripul Kumar</h6>
-                <p>Independent Consultant at Make My Trip</p>
+                <p>Independent Consultant, MakeMyTrip</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/deepa.jpg" />
             <div class="speakers-list-description">
-                <h6>Deepa Bacchu</h6>
-                <p>Co-Founder and CEO at Pensar Design</p>
+                <h6>Deepa Bachu</h6>
+                <p>Co-Founder and CEO, Pensaar Design</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/vikram.jpg" />
             <div class="speakers-list-description">
                 <h6>Vikram Shenoy</h6>
-                <p>Lead at India Digital Studios, Deloitte Digital</p>
+                <p>Country Lead, India Studios, Deloitte Digital</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/vinod.jpg" />
             <div class="speakers-list-description">
                 <h6>Vinod Kumaar R</h6>
-                <p>Lead Developer at ThoughtWorks</p>
+                <p>Lead Developer, ThoughtWorks</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/vishal.jpg" />
             <div class="speakers-list-description">
                 <h6>Vishal Vinaykumar Prasad</h6>
-                <p>Lead Business Analyst at ThoughtWorks</p>
+                <p>Lead Business Analyst, ThoughtWorks</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/sabitha.jpg" />
             <div class="speakers-list-description">
                 <h6>Sabitha Rajat</h6>
-                <p>Business Analyst at ThoughtWorks)</p>
+                <p>Business Analyst, ThoughtWorks</p>
             </div>
         </div>
 
