--- a/index.html
+++ b/index.html
@@ -58,19 +58,28 @@
 
                 <div class="large-5 columns speaker-list">
 
-                        <a href="#speaker_list"  rel="nofollow"
+                        <a href="#agenda"  rel="nofollow"
                                onclick="ga('send', 'event', 'speaker_list', 'speaker_list')">
-                            <h4>Speakers</h4>
+                            <h4>Agenda</h4>
                         </a>
                 </div>
                 <div class="large-5 columns participate">
 
-                        <a href="#agenda"  rel="nofollow">
-                            <h4>Agenda</h4>
+                        <a href="#speaker_list"  rel="nofollow">
+                            <h4>Speakers</h4>
                         </a>
                 </div>
 
+
+
         </div>
+
+        <div class="row actions actions-2"> <div class="large-5 columns participate">
+
+            <a href="#registration"  rel="nofollow">
+                <h4>Register for Converge</h4>
+            </a>
+    </div></div>
 
     </section>
 
@@ -78,9 +87,9 @@
     <div class="row"
          data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
         <div class="large-12 columns social">
-            <a rel="nofollow" href="https://www.facebook.com/Convergencr" target="_blank"><i class="icon-facebook-2" title="FaceBook discussion group" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
-            <a rel="nofollow" href="https://www.linkedin.com/groups/6748221/profile" target="_blank"><i class="icon-linkedin-2" title="LinkedIn group" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
-            <a rel="nofollow" href="https://twitter.com/intent/tweet?url=thoughtworks-bangalore.github.io/converge&text=I+would+be+attending&hashtags=convergebangalore" target="_blank" title="Tweet hashtag #convergebangalore" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
+            <a rel="nofollow" href="https://www.facebook.com/ThoughtWorks/" target="_blank"><i class="icon-facebook-2" title="ThoughtWorks Facebook" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
+            <a rel="nofollow" href="https://www.linkedin.com/company/thoughtworks/" target="_blank"><i class="icon-linkedin-2" title="ThoughtWorks LinkedIn" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
+            <a rel="nofollow" href="https://twitter.com/TW_IndiaEdition" target="_blank" title="ThoughtWorks Twitter" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
             <a rel="nofollow" href="mailto:converge-bangalore@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
             <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
@@ -142,7 +151,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-0"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Registrations</p>
+                <p>Registration</p>
 
             </div>
           </div>
@@ -158,7 +167,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Event Kick Off<br><i><font size="4">Anirvan Debabrata Lahiri (Product Manager, ThoughtWorks)</i></font></p>
+                <p>Event Kick Off<br><i><font size="4">Anirvan Debabrata Lahiri (India Lead, Product Innovation, ThoughtWorks)</i></font></p>
 
             </div>
 
@@ -175,7 +184,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Keynote Address: First Principles Thinking<br><i><font size="4">Anuj Rathi (Vice President of Product Management, Swiggy)</i></font></p></p>
+                <p>Keynote: First Principles Thinking<br><i><font size="4">Anuj Rathi (Vice President of Product Management, Swiggy)</i></font></p></p>
             </div>
           </div>
 
@@ -205,7 +214,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-3"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Tea and Snacks</p>
+                <p>Tea Break</p>
             </div>
           </div>
 
@@ -310,7 +319,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>Closing and Break</p>
+                 <p>Event Wrap-up</p>
             </div>
           </div>
 
@@ -325,7 +334,8 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>Workshop: Innovation in Product Thinking<br><i><font size="4"></i></font></p></p>
+                 <p>Workshop: Innovation in Product Thinking<br><i><font size="4">Priya Lakhe & Priya Malhotra (Business Analysts, ThoughtWorks)</i></font>
+                    <small>On-spot registration (limited seats)</small></p></p>
             </div>
           </div>
 
