--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                 <p>First Principles of Culture and Product<br><i><font size="4">Vikram Shenoy (Country Lead, India Studios, Deloitte Digital)</i></font></p></p>
+                 <p>First Principles of Culture and Product<br><i><font size="4">Vikram Shenoy (Digital Experience Leader)</i></font></p></p>
             </div>
           </div>
 
@@ -384,7 +384,7 @@
         <div class="speakers-list-item"><img src="./img/2019/vikram.jpg" />
             <div class="speakers-list-description">
                 <h6>Vikram Shenoy</h6>
-                <p>Country Lead, India Studios, Deloitte Digital</p>
+                <p>Digital Experience Leader</p>
             </div>
         </div>
         <div class="speakers-list-item"><img src="./img/2019/vinod.jpg" />
