--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
         <div class="row actions actions-2"> <div class="large-5 columns participate">
 
-            <a href="#registration"  rel="nofollow">
+            <!-- <a href="#registration"  rel="nofollow">
                 <h4>Register for Converge</h4>
-            </a>
+            </a> -->
     </div></div>
 
     </section>
@@ -438,11 +438,11 @@
 </header>
 </center>
 
-<section id="registration" class="feature" >
+<!-- <section id="registration" class="feature" >
     <center>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSco127aB2KkpkEw5QYHcjXZF2IGTsBf8WFViN9TMD-InaSbWQ/viewform?embedded=true" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
-</section>
+</section> -->
 
 <section id="location" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
