Amit|Changing to Remote converge.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             It's imperative to 'Reimagine Entire Ecosystems with Digital Platforms' not just as a competitive necessity but for new value creation.
         </p>
         <br>
-        <a href="#location" class="link"><i>Hope to see you on Saturday, 5th December @ ThoughtWorks, Koramangala Bengaluru</i></a>
+        <a href="#location" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20! <br> Registration opens soon!</i></a>
         <br><br>
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
