Gopi | added speaker list of converge 2020

--- a/index.html
+++ b/index.html
@@ -354,52 +354,88 @@
     <div class="header">
         <h2>Speakers</h2>
     </div>
-    <div class="speakers-list-item speakers-list-item-initial">
+    <!-- <div class="speakers-list-item speakers-list-item-initial">
         <img src="./img/2020/coming-soon.jpg" />
         <div class="speakers-list-description">
             <h6>Coming Soon</h6>
 <!--            <p>Vice President of Product Management, Swiggy</p>-->
         </div>
-    </div>
-<!--    <div class="speakers-list">-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/ripul.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Ripul Kumar</h6>-->
-<!--                <p>Independent Consultant, MakeMyTrip</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/deepa.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Deepa Bachu</h6>-->
-<!--                <p>Co-Founder and CEO, Pensaar Design</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/vikram.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Vikram Shenoy</h6>-->
-<!--                <p>Digital Experience Leader</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/vinod.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Vinod Kumaar R</h6>-->
-<!--                <p>Lead Developer, ThoughtWorks</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/vishal.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Vishal Vinaykumar Prasad</h6>-->
-<!--                <p>Lead Business Analyst, ThoughtWorks</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="speakers-list-item"><img src="./img/2019/sabitha.jpg" />-->
-<!--            <div class="speakers-list-description">-->
-<!--                <h6>Sabitha Rajat</h6>-->
-<!--                <p>Business Analyst, ThoughtWorks</p>-->
-<!--            </div>-->
-<!--        </div>-->
+    </div> -->
+   <div class="speakers-list">
+       <div class="speakers-list-item"><img src="./img/2020/ajay.jpg" />
+           <div class="speakers-list-description">
+               <h6>Dr. Ajay Sethi</h6>
+               <p>Venture Partner</p>
+               <p>Accel Partners</p>
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/anirvan.jpg" />
+           <div class="speakers-list-description">
+               <h6>Anirvan Lahiri</h6>
+               <p>Product Manager</p>
+                <p>ThoughtWorks</p>
 
-<!--    </div>-->
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/anumeha.jpg" />
+           <div class="speakers-list-description">
+               <h6>Anumeha Verma</h6>
+               <p>Business Analyst</p>
+                <p>ThoughtWorks</p>
+
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/ashok.jpg" />
+           <div class="speakers-list-description">
+               <h6>Ashok Kumar</h6>
+               <p>Director (Wireless Access), NTIPRIT</p>
+               <p>Department Of Telecommunications</p>
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/dinker.jpg" />
+           <div class="speakers-list-description">
+               <h6>Dinker Charak</h6>
+               <p>Product Manager</p>
+                <p>ThoughtWorks</p>
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
+           <div class="speakers-list-description">
+               <h6>Kavitha Thyagarajan</h6>
+               <p>Experience Designer</p>
+                <p>ThoughtWorks</p>
+
+           </div>
+       </div>
+       <div class="speakers-list-item"><img src="./img/2020/mujir.jpg" />
+        <div class="speakers-list-description">
+            <h6>Mujiruddin Shaikh</h6>
+            <p>Market Tech Principal</p>
+            <p>ThoughtWorks</p>
+        </div>
+    </div>
+    <div class="speakers-list-item"><img src="./img/2020/renu.jpg" />
+        <div class="speakers-list-description">
+            <h6>Renu Satti</h6>
+            <p>Senior Vice President</p>
+            <p>PayTM</p>
+        </div>
+    </div>
+    <div class="speakers-list-item"><img src="./img/2020/sreevathsa.jpg" />
+        <div class="speakers-list-description">
+            <h6>Sreevathsa Prabhakar</h6>
+            <p>Entrepreneur</p>
+            <p>Founder, Servify</p>
+        </div>
+    </div>
+    <div class="speakers-list-item"><img src="./img/2020/visalakshi.jpg" />
+        <div class="speakers-list-description">
+            <h6>Visalakshi Subramaniam</h6>
+            <p>Global Head Retail</p>
+            <p>ThoughtWorks</p>
+        </div>
+    </div>
+   </div>
 </section>
 
 
