Gopi | chores - updated speaker deck & removed location tab

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2>Agenda</h2>
     </div>
     <div class="row">
-        <h3>Coming Soon...</h3>
+        <h4>The event starts at 9:15 AM. Watch out this space for more details...</h4>
     </div>
 
 <!--    <div class="timings">-->
@@ -354,13 +354,13 @@
     <div class="header">
         <h2>Speakers</h2>
     </div>
-    <!-- <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2020/coming-soon.jpg" />
-        <div class="speakers-list-description">
-            <h6>Coming Soon</h6>
-<!--            <p>Vice President of Product Management, Swiggy</p>-->
+    <div class="speakers-list-item speakers-list-item-initial"> 
+        <img src="./img/2020/kiran.jpg" />
+         <div class="speakers-list-description">
+            <h6>Kiran Anandampillai</h6>
+            <p>Advisor Technology NDHM</p>
         </div>
-    </div> -->
+    </div>
    <div class="speakers-list">
        <div class="speakers-list-item"><img src="./img/2020/ajay.jpg" />
            <div class="speakers-list-description">
@@ -458,7 +458,7 @@
                     <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li>
                     <li> <a href="#registration"  rel="nofollow">Registration</a> </li>
 
-                    <li><a href="#location">Location</a></li>
+                    <!-- <li><a href="#location">Location</a></li> -->
                     <li><a href="#archive">Previous Editions</a></li>
                 </ul>
             </section>
@@ -473,7 +473,7 @@
     </center>
 </section> -->
 
-<section id="location" class="feature">
+<!-- <section id="location" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
         <br><h2>Location</h2>
     </div>
@@ -495,7 +495,7 @@
             </a>
         </div>
     </div>
-</section>
+</section> -->
 
 <section id="archive" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
