updated registration link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             It's imperative to 'Reimagine Entire Ecosystems with Digital Platforms' not just as a competitive necessity but for new value creation.
         </p>
         <br>
-        <a href="#location" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20! <br> Registration opens soon!</i></a>
+        <a href="#registration" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20! <br> Register now!</i></a>
         <br><br>
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
@@ -174,7 +174,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p> Keynote Address <br><i><font size="4">Kiran Anandampillai</i></font></p></p>
+                <p> Re-imagining Healthcare with the National Digital Health Mission <br><i><font size="4">Kiran Anandampillai</i></font></p></p>
             </div>
         </div>
 
@@ -465,11 +465,11 @@
 </header>
 </center>
 
-<!-- <section id="registration" class="feature" >
+<section id="registration" class="feature" >
     <center>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSco127aB2KkpkEw5QYHcjXZF2IGTsBf8WFViN9TMD-InaSbWQ/viewform?embedded=true" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
-</section> -->
+</section>
 
 <!-- <section id="location" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
