registration open as new tab

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#agenda">Agenda</a></li>
                     <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li>
-                    <li> <a href="#registration"  rel="nofollow">Registration</a> </li>
+                    <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" rel="nofollow">Registration</a> </li>
 
                     <!-- <li><a href="#location">Location</a></li> -->
                     <li><a href="#archive">Previous Editions</a></li>
@@ -464,12 +464,12 @@
     </div>
 </header>
 </center>
-
+<!-- 
 <section id="registration" class="feature" >
     <center>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
-</section>
+</section> -->
 
 <!-- <section id="location" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
