modified the register now as a button

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html    >
+a<!DOCTYPE html    >
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" xmlns:og="http://ogp.me/ns#"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" xmlns:og="http://ogp.me/ns#"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" xmlns:og="http://ogp.me/ns#"> <![endif]-->
@@ -10,7 +10,7 @@
     <title>Converge Bangalore - December 2020</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -115,8 +115,19 @@
             It's imperative to 'Reimagine Entire Ecosystems with Digital Platforms' not just as a competitive necessity but for new value creation.
         </p>
         <br>
-        <a href="#registration" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20! <br> Register now!</i></a>
+        <a href="#registration" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20!</a>
         <br><br>
+
+
+        <div class="row actions">
+
+        <a 
+        href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank"   rel="nofollow">
+   <button class="button">
+       Register now
+   </button>
+    </a>
+        </div>
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
     </div>
